# Aylanome

./: .gitignore  .metadata  CMakeLists.txt  README.md  Readme.md  pubspec.yaml
lib/: main.dart
lib/model/: Kernel.dart
lib/presenter/: Consts.dart  MainPagePresenter.dart  ScreenPresenter.dart
lib/view/: MainPage.dart  Screen.dart
linux/: CMakeLists.txt  my_application.cc
src/: BoardWidget.cpp  BoardWidget.hpp  CompoundShader.cpp  ControlsWidget.cpp  ControlsWidget.hpp  DrawMode.hpp  MainWidget.cpp  MainWidget.hpp  MainWindow.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  elements.hpp  main.c  main.cpp  vectors.hpp
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
